[package]
name = "uhttp_transfer_encoding"
version = "0.5.1"
authors = ["Mick Koch <mick@kochm.co>", "Mark Tomlin <Dygear@gmail.com>"]
description = "Iterator/slice-based parser for HTTP transfer-encoding header"
license = "MIT"
documentation = "https://docs.rs/uhttp_transfer_encoding"
repository = "https://github.com/Dygear/uhttp_transfer_encoding.rs"
keywords = ["http", "header", "transfer-encoding", "transfer", "encoding"]
